v_1.0 первый запуск swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Summer_practise
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/request
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.hibernate.ddl-auto=update
