--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/request
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test-consumer-group
